# trabalho-2-cg-luiz-filipe

./: CMakeLists.txt
include/: camera.hpp  importer.hpp  model.hpp  timer.hpp
include/glad/: glad.h
shaders/: fragment.glsl  vertex.glsl
src/: glad.cpp  importer.cpp  main.cpp
